Attempt at hiding extension

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav>
 	<ul>
 		<li><a class="active">Home</a></li>
-		<li><a href="HTML/Rotation.html">Rotation</a></li>
+		<li><a href="HTML/Rotation">Rotation</a></li>
 		<li><a href="HTML/Ksolve.html">Ksolve</a></li>
 		<li><a href="HTML/Rater.html">Alg rater</a></li>
 		<li><a href="HTML/CancelRater.html">Cancel alg rater</a></li>
