Hide extension of html files

--- a/cancel-alg-rater.html
+++ b/cancel-alg-rater.html
@@ -15,13 +15,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Rotation.html">Rotation</a></li>
-            <li><a href="Ksolve.html">Ksolve</a></li>
-            <li><a href="Rater.html">Alg rater</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="rotation">Rotation</a></li>
+            <li><a href="ksolve">Ksolve</a></li>
+            <li><a href="alg-rater">Alg rater</a></li>
             <li><a href="" class="active">Cancel alg rater</a></li>
-            <li><a href="ImageGenerator.html">Image generator</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="image-generator">Image generator</a></li>
+            <li><a href="about">About</a></li>
         </ul>
     </nav>
 
