--- a/image-generator.html
+++ b/image-generator.html
@@ -17,13 +17,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Rotation.html">Rotation</a></li>
-            <li><a href="Ksolve.html">Ksolve</a></li>
-            <li><a href="Rater.html">Alg rater</a></li>
-            <li><a href="CancelRater.html">Cancel alg rater</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="rotation">Rotation</a></li>
+            <li><a href="ksolve">Ksolve</a></li>
+            <li><a href="alg-rater">Alg rater</a></li>
+            <li><a href="cancel-alg-rater">Cancel alg rater</a></li>
             <li><a href="" class="active">Image generator</a></li>
-            <li><a href="About.html" >About</a></li>
+            <li><a href="about" >About</a></li>
         </ul>
     </nav>
     <div class="container pb-3">
