--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <nav>
 	<ul>
 		<li><a class="active">Home</a></li>
-		<li><a href="HTML/Rotation">Rotation</a></li>
-		<li><a href="HTML/Ksolve.html">Ksolve</a></li>
-		<li><a href="HTML/Rater.html">Alg rater</a></li>
-		<li><a href="HTML/CancelRater.html">Cancel alg rater</a></li>
-		<li><a href="HTML/ImageGenerator.html">Image generator</a></li>
-		<li><a href="HTML/About.html">About</a></li>
+		<li><a href="rotation">Rotation</a></li>
+		<li><a href="ksolve">Ksolve</a></li>
+		<li><a href="alg-rater">Alg rater</a></li>
+		<li><a href="cancel-alg-rater">Cancel alg rater</a></li>
+		<li><a href="image-generator">Image generator</a></li>
+		<li><a href="about">About</a></li>
 	</ul>
 </nav>
 <div class="container align-content-center">
