Trying to fix redirection issue

--- a/rotation.html
+++ b/rotation.html
@@ -20,11 +20,11 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="" class="active">Rotation</a></li>
-            <li><a href="ksolve">ksolve</a></li>
-            <li><a href="alg-rater">Alg rater</a></li>
-            <li><a href="cancel-alg-rater">Cancel alg rater</a></li>
-            <li><a href="image-generator">Image generator</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="ksolve.html">ksolve</a></li>
+            <li><a href="alg-rater.html">Alg rater</a></li>
+            <li><a href="cancel-alg-rater.html">Cancel alg rater</a></li>
+            <li><a href="image-generator.html">Image generator</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 
