--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="rotation">Rotation</a></li>
-            <li><a href="ksolve">Ksolve</a></li>
-            <li><a href="alg-rater">Alg rater</a></li>
-            <li><a href="cancel-alg-rater">Cancel alg rater</a></li>
-            <li><a href="image-generator">Image generator</a></li>
+            <li><a href="rotation.html">Rotation</a></li>
+            <li><a href="ksolve.html">Ksolve</a></li>
+            <li><a href="alg-rater.html">Alg rater</a></li>
+            <li><a href="cancel-alg-rater.html">Cancel alg rater</a></li>
+            <li><a href="image-generator.html">Image generator</a></li>
             <li><a href="" class="active">About</a></li>
         </ul>
     </nav>
