--- a/alg-rater.html
+++ b/alg-rater.html
@@ -17,12 +17,12 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="rotation">Rotation</a></li>
-            <li><a href="ksolve">Ksolve</a></li>
+            <li><a href="rotation.html">Rotation</a></li>
+            <li><a href="ksolve.html">Ksolve</a></li>
             <li><a href="" class="active">Alg rater</a></li>
-            <li><a href="cancel-alg-rater">Cancel alg rater</a></li>
-            <li><a href="image-generator">Image generator</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="cancel-alg-rater.html">Cancel alg rater</a></li>
+            <li><a href="image-generator.html">Image generator</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 <div class="container pb-4">
