--- a/cancel-alg-rater.html
+++ b/cancel-alg-rater.html
@@ -16,12 +16,12 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="rotation">Rotation</a></li>
-            <li><a href="ksolve">Ksolve</a></li>
-            <li><a href="alg-rater">Alg rater</a></li>
+            <li><a href="rotation.html">Rotation</a></li>
+            <li><a href="ksolve.html">Ksolve</a></li>
+            <li><a href="alg-rater.html">Alg rater</a></li>
             <li><a href="" class="active">Cancel alg rater</a></li>
-            <li><a href="image-generator">Image generator</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="image-generator.html">Image generator</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
 
